--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "three-demo",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "deploy": "gh-pages -d dist"
   },
+  
   "devDependencies": {
     "vite": "^2.3.0"
   },
